tests/ui/consts/const-eval/panic-assoc-never-type.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/panic-assoc-never-type.rs:9:21
   |
LL |     const VOID: ! = panic!();
   |                     ^^^^^^^^ the evaluated program panicked at 'explicit panic', $DIR/panic-assoc-never-type.rs:9:21
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
  --> $DIR/panic-assoc-never-type.rs:14:13
   |
LL |     let _ = PrintName::VOID;
   |             ^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/panic-assoc-never-type.rs:14:13
   |
LL |     let _ = PrintName::VOID;
   |             ^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
